--- a/Ecommerce/Views/Product/Index.cshtml
+++ b/Ecommerce/Views/Product/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h2>Menu</h2>
+<a asp-action="AddEdit" asp-controller="Product" class="btn btn-primary">Create New Item</a>
 
 <div class="row">
     @foreach(Product prod in Model)
@@ -14,6 +15,12 @@
                 <input type="hidden" name="id" value="@prod.ProductId" />
                 <div class="card" style="width: 18rem;">
                     <img src="@Url.Content("~/images/" + prod?.ImageUrl)" class="card-img-top fixed-image-height" alt="@prod.Description" />
+                    <div class="card-body">
+                        <h5 class="card-title">@prod.Name</h5>
+                        <p class="card-text">@prod.Description</p>
+                        <p class="card-text">@prod.Price.ToString("C")</p>
+                        <p class="card-text">Quantity In Stock: @prod.Stock</p>
+                    </div>
                 </div>
             </form> 
         </div>
