--- a/Ecommerce/Views/Product/Index.cshtml
+++ b/Ecommerce/Views/Product/Index.cshtml
@@ -20,6 +20,7 @@
                         <p class="card-text">@prod.Description</p>
                         <p class="card-text">@prod.Price.ToString("C")</p>
                         <p class="card-text">Quantity In Stock: @prod.Stock</p>
+                        <a class="btn btn-info" asp-controller="Product" asp-action="AddEdit" asp-route-id="@prod.ProductId"><i class="bi bi-pencil-fill">Edit</i></a>
                     </div>
                 </div>
             </form> 
